# auth-service

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: publish.yml
alembic/: env.py
alembic/versions/: 0001_initial_structure.py  976df88f5308_create_users_table.py  a706f969f89a_add_roles_and_user_roles_tables.py
app/: config.py  crud.py  database.py  main.py  models.py  schemas.py  security.py
tests/: conftest.py  roles.http  test_main.py
