[project]
name = "auth-service"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "fastapi>=0.120.1",
    "uvicorn>=0.38.0",
    "sqlalchemy[asyncio]>=2.0.31",
    "asyncpg>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "pydantic-settings>=2.4.0",
    "passlib[bcrypt]>=1.7.4",
    "alembic>=1.17.1",
]
# readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "httpx>=0.27.0",
    "pytest-dotenv>=0.5.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/auth_service"]
